change of transaction logic
